--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,5 @@ before_script:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
 script:
+- yarn lint
 - yarn test # the prepare script already does a build prior to this
