--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
     "build": "neutrino build",
     "docs": "rm -f docs/* && bin/generate-docs",
     "compile-clients": "rm -f src/clients/* && bin/compile-clients",
+    "lint": "neutrino lint",
     "list-clients": "bin/list-clients",
     "prepare": "yarn build",
     "show-client": "bin/show-client",
     "test": "neutrino test",
     "update-all": "yarn compile-clients && yarn build && yarn docs"
+  },
+  "lint-staged": {
+    "*.js": [
+      "neutrino lint --fix",
+      "git add"
+    ]
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -28,13 +35,15 @@
     "common-tags": "^1.4.0",
     "ejs": "^2.5.7",
     "got": "^7.1.0",
+    "husky": "^0.14.3",
     "javascript-stringify": "^1.6.0",
     "json-schema-to-markdown": "^1.0.3",
     "json-stable-stringify": "^1.0.1",
     "karma-sourcemap-loader": "^0.3.7",
-    "neutrino": "^6.1.5",
-    "neutrino-preset-karma": "^6.1.5",
-    "neutrino-preset-taskcluster-web-library": "^1.0.0",
+    "lint-staged": "^4.2.1",
+    "neutrino": "^6.2.0",
+    "neutrino-preset-karma": "^6.2.0",
+    "neutrino-preset-taskcluster-web-library": "^2.0.0",
     "object.omit": "^3.0.0"
   },
   "dependencies": {
