--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ node_modules/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
+*$py.class
 
 # C extensions
 *.so
@@ -75,3 +76,6 @@ docs/_build/
 target/
 # hypothesis cache
 .hypothesis/
+
+# vim's python-mode plugin
+.ropeproject
